[gd_scene load_steps=34 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/pikachu-sheet.png" type="Texture" id=2]
[ext_resource path="res://musics/HappyBirthday.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/birthday-cake-sheet.png" type="Texture" id=4]
[ext_resource path="res://assets/light.png" type="Texture" id=5]
[ext_resource path="res://fonts/vn-font.otf" type="DynamicFontData" id=6]
[ext_resource path="res://effects/YellowPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/jp-font.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/eevee-sheet.png" type="Texture" id=9]
[ext_resource path="res://fonts/arcade.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/present-box-sheet.png" type="Texture" id=11]
[ext_resource path="res://PresentBox.gd" type="Script" id=12]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.121372, 0.189974 )
colors = PoolColorArray( 1, 1, 1, 1, 0.945312, 0.934235, 0.934235, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1024

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 8 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/arcade.ttf"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 4 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=17]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=18]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0.994723, 1 )

[sub_resource type="GradientTexture" id=20]
gradient = SubResource( 19 )
width = 1024

[sub_resource type="CircleShape2D" id=21]
radius = 81.4296

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 512, 300 )
mouse_filter = 2
texture = SubResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -20.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.505882, 0.176471, 0.176471, 1 )
text = "Loading..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 17.6965
margin_bottom = 31.6965
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.505882, 0.176471, 0.176471, 1 )
align = 1

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
texture_scale = 2.0
color = Color( 0.501961, 0.482353, 0.231373, 0.254902 )
energy = 3.35
mode = 2

[node name="Pikachu" type="AnimatedSprite" parent="."]
position = Vector2( 384.833, 271.92 )
scale = Vector2( 3, 3 )
frames = SubResource( 9 )
frame = 2
playing = true

[node name="Eevee" type="AnimatedSprite" parent="."]
position = Vector2( 641.3, 282.222 )
scale = Vector2( 3, 3 )
frames = SubResource( 12 )
playing = true

[node name="BirthdayCake" type="AnimatedSprite" parent="."]
position = Vector2( 512, 387 )
scale = Vector2( 3.5, 3.5 )
frames = SubResource( 16 )
playing = true

[node name="JPHappyBirthday" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 54.7261
margin_bottom = 123.726
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "お誕生日
おめでとう！"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ENHappyBirthday" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -433.972
margin_bottom = -316.972
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0.729412, 0.588235, 0.588235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Happy Birthday
to Halm!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VNHappyBirthday" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -152.274
margin_bottom = -98.2739
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Sinh nhật vui vẻ!!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLight2D" type="Light2D" parent="."]
position = Vector2( 325.532, 524.266 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 5 )
texture_scale = 0.5
color = Color( 0.501961, 0.482353, 0.231373, 0.254902 )
energy = 3.35
mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
mix_target = 1

[node name="Firefly" parent="." instance=ExtResource( 7 )]
position = Vector2( 499.499, 276.935 )

[node name="TopLayer" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 512, 300 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="TopLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresentBox" type="Area2D" parent="TopLayer"]
position = Vector2( 512, 300 )
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="TopLayer/PresentBox"]
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
hframes = 2

[node name="Light" type="Light2D" parent="TopLayer/PresentBox"]
position = Vector2( 4.75769, 0.0599365 )
scale = Vector2( 3, 3 )
z_index = 10
texture = ExtResource( 5 )
texture_scale = 1.47
color = Color( 1, 1, 1, 0.431373 )
energy = 2.5
mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLayer/PresentBox"]
position = Vector2( 2.51984, 3.14981 )
shape = SubResource( 21 )

[node name="Tween" type="Tween" parent="TopLayer"]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Tween1" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Tween3" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="input_event" from="TopLayer/PresentBox" to="TopLayer/PresentBox" method="_on_PresentBox_input_event"]
[connection signal="mouse_entered" from="TopLayer/PresentBox" to="TopLayer/PresentBox" method="_on_PresentBox_mouse_entered"]
[connection signal="mouse_exited" from="TopLayer/PresentBox" to="TopLayer/PresentBox" method="_on_PresentBox_mouse_exited"]
[connection signal="tween_all_completed" from="TopLayer/Tween" to="TopLayer/PresentBox" method="_on_Tween_tween_all_completed"]
[connection signal="tween_completed" from="Tween1" to="." method="_on_Tween1_tween_completed"]
[connection signal="tween_completed" from="Tween2" to="." method="_on_Tween2_tween_completed"]
